# zspaceMQ

./: CMakeLists.txt  README.md  configure  make.sh
config/: config.properties
script/: make2.sh
src/code/Cache/: DequeCache.hpp
src/code/MessageQueue/: InitMessageQueue.cpp  InitMessageQueue.h  InitMessageQueueP.cpp  InitMessageQueueP.h  MessageHandle.h  MessageHandleP.cpp  MessageHandleT.cpp  MessageQueue.hpp  initMessageQueueT.cpp  initMessageQueueT.h  initThreadMessageQueue.cpp  initThreadMessageQueue.h
src/code/Monitor/: SubInfoMonitor.cpp  SubInfoMonitor.h
src/code/ThreadPool/: ThreadPool.cpp
src/code/TopicSync/: TopicSync.pb.cc  TopicSync.pb.h  TopicSync.proto
test/example1/: CMakeLists.txt
test/example2/: CMakeLists.txt  main.cpp
test/test1/: CMakeLists.txt  main.cpp
test/test2/: CMakeLists.txt  main.cpp
test/test3/: CMakeLists.txt  pub.cpp  sub.cpp
test/test3/protoMsg/: message.pb.cc  message.pb.h  message.proto
test/test4/: CMakeLists.txt  pub.cpp  sub.cpp
